--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.olah</groupId>
-    <artifactId>gcloud-backup-server</artifactId>
+    <artifactId>gcloud-backup-photo-service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -22,6 +22,12 @@
         <artifactId>junit</artifactId>
         <version>4.12</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.olah</groupId>
+        <artifactId>gcloud-backup-api</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <classifier>client</classifier>
     </dependency>
 
 </dependencies>
