--- a/pom.xml
+++ b/pom.xml
@@ -14,22 +14,27 @@
     </properties>
 
 
-<dependencies>
+    <dependencies>
 
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.olah</groupId>
-        <artifactId>gcloud-backup-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <classifier>client</classifier>
-    </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.olah</groupId>
+            <artifactId>gcloud-backup-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <classifier>server</classifier>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.11.396</version>
+        </dependency>
+    </dependencies>
 
-</dependencies>
-
-   </project>
+</project>
